# rag_workouts

./: .gitignore  test.ipynb
01-TALK_TO_MY_BOOK/: data_indexer.py  llm_handler.py  pyproject.toml  ui.py
01-TALK_TO_MY_BOOK/bibliography/: cap1_la_causa_judicial.md  cap2_el_ciclo_procedimental.md
01-TALK_TO_MY_BOOK/markdown/: cap3_presentaciones_de_parte.md  cap4_resoluciones_judiciales.md
01-TALK_TO_MY_BOOK/parent_documents/actuacion_del_abogado_en_la_causa_judicial/: 0016f385-8702-4e0c-a0d5-81ef6e6aa536  01162bbb-d099-49ae-9c69-b5da68697bf4  019a9e1b-1133-4b48-8aa0-b817cbffd9b0  01a3c650-5a15-48e7-8f05-263125fcd44e  0293647e-2328-465a-a250-32601dae8a52  029f93b7-3937-4d7c-a4c6-d9a523ffabd0  02c467fc-5147-45df-93a8-553d8fe8b6f8  02c6ad90-cb92-4bff-9509-c228afde0f59  04a2925d-972b-428f-9b00-96e2dd1c6453  0529ba5f-7fe5-4179-ab66-ae6cf376cfa6  0540b2f1-20fd-488f-a348-6676c22a44cc  05a1a5af-12bf-4024-9de1-ca1762b530ff  05e38373-fd86-4905-9532-6770ebc95328  05f9e74b-e6d9-4903-b73a-1331ed54f178  06609dbd-8daa-418f-9462-f832c8b8f335  06b99830-3f9c-437a-8efb-75c38c60fc79  0711a851-dbe8-4e62-9df8-57328d4399c2  071d501e-8e6b-4375-b91c-ac2bef6c89f3  08ba566d-d8c8-4f52-8641-7275ba327e40  092376c0-3b8e-4b3e-9173-bccfbe240d70  0a26786b-885f-4548-83e4-69b20b7e00fa  0b24457d-9d19-4321-8a1f-68a7507392e1  0cab863c-8589-4903-9213-f9265f9c5253  0ccf9332-be6f-44ab-aadc-77f7220dca70  0cff354d-a015-414f-bfc1-046b9ff5fdee  (+415 more)
PDF_LOADERS/LC-PyMuPDF4llm/: gen_pymupdf4llm.py  pymu_pdf4llm.py  pyproject.toml
PDF_LOADERS/LC-RapidOCR/: gen_rapid_ocr.py  pyproject.toml  rapid_ocr.py
(+584 files in other folders)
