[project]
name = "lc-pymupdf4llm"
version = "0.1.0"
description = "A langchain's PyMuPDF4LLM implementation to load PDF files"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.43",
    "langchain-pymupdf4llm>=0.2.0",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]
