[project]
name = "lc-rapidocr"
version = "0.1.0"
description = "A langchain's RapidOCR implementation to load PDF files"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.43",
    "pdf2image>=1.17.0",
    "rapidocr-onnxruntime>=1.4.4",
    "rich>=13.9.4",
]
